[package]
name = "gemblockchain"
version = "0.2.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library to work with Gem blockchain"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gemchain.tech/"
repository = "https://github.com/gemblockchain/gem-lib-rust"
keywords = ["gem", "blockchain"]

[dependencies]
data-encoding = "2.2.1"
sp-core = "2.0.1"